--- a/index.html
+++ b/index.html
@@ -56,8 +56,12 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex flex-column justify-content-center">
         <div class="container" data-aos="zoom-in" data-aos-delay="100">
-            <p>console.log("Hi there ...")</p>
-            <h1><b>Bagus</b> Frayoga Effendi</h1>
+            <p>
+                <hello>
+                    My name is ..
+                </hello>
+            </p>
+            <h1>Bagus Frayoga Effendi</h1>
             <p>I'm <span class="typed" data-typed-items="an Engineer, a Mobile Developer, a Good Talent!"></span></p>
             <div class="social-links">
                 <a href="http://twitter.com/bagusfedotid" class="twitter"><i class="bx bxl-twitter"></i></a>
