--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<body>
+<body oncontextmenu="return false">
 
     <!-- ======= Mobile nav toggle button ======= -->
     <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
